feat: Add CMake configuration to build first bootloader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,21 +6,6 @@ project(
     LANGUAGES C ASM
     )
 
-# Set the system name to generic to avoid macOS-specific flags
-set(CMAKE_SYSTEM_NAME Generic)
-
-# Clear any macOS or default flags that may introduce `-arch`
-set(CMAKE_C_FLAGS "")
-set(CMAKE_CXX_FLAGS "")
-set(CMAKE_ASM_FLAGS "")
-set(CMAKE_EXE_LINKER_FLAGS "")
-set(CMAKE_SHARED_LINKER_FLAGS "")
-
-set(tools /opt/homebrew)
-set(CMAKE_C_COMPILER ${tools}/bin/arm-none-eabi-gcc)
-set(CMAKE_ASM_COMPILER ${tools}/bin/arm-none-eabi-as)
-set(CMAKE_LINKER ${tools}/bin/arm-none-eabi-ld)
-
 add_subdirectory(startup)
 add_subdirectory(vectortable)
 add_subdirectory(bootloader)
@@ -36,16 +21,41 @@ add_executable(
     ${vectortable_sources}
     )
 
+target_link_directories(
+    ghost_feather_first_bootloader
+    PUBLIC
+    ${PROJECT_SOURCE_DIR}/libopencm3/lib
+    ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
+    )
+
 target_link_libraries(
     ghost_feather_first_bootloader
     PUBLIC
     stm32f722xx_startup
     first_bootloader
     vectortable
+    libopencm3_stm32f7.a
     )
 
 target_compile_definitions(
     ghost_feather_first_bootloader
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
+    )
+
+target_compile_options(
+    ghost_feather_first_bootloader
+    PUBLIC
+    -mfloat-abi=hard
+    -mfpu=fpv4-sp-d16
+    -mcpu=cortex-m7
+    -mthumb
+    )
+
+target_link_options(
+    ghost_feather_first_bootloader
+    PUBLIC
+    -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_bootloader.ld
+    -nostartfiles
+    -nostdlib
     )
