feat: Update CMakeLists.txt files to be able to build multiple bootloaders

--- a/vectortable/CMakeLists.txt
+++ b/vectortable/CMakeLists.txt
@@ -6,11 +6,7 @@ set_property(
     ${VECTORTABLE_SOURCES}
     )
 
-message(
-    STATUS
-    "Add vectortable library"
-    )
-
+message(STATUS "Add vectortable library")
 add_library(
     vectortable
     ${VECTORTABLE_SOURCES}
