--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,17 @@ project(
     LANGUAGES C ASM
     )
 
+add_subdirectory(bootloader)
+add_subdirectory(app)
 add_subdirectory(startup)
 add_subdirectory(vectortable)
-add_subdirectory(bootloader)
 
 get_cmake_property(first_bootloader_sources FIRST_BOOTLOADER_SOURCES)
 get_cmake_property(second_bootloader_sources SECOND_BOOTLOADER_SOURCES)
+get_cmake_property(app_sources APP_SOURCES)
 get_cmake_property(stm32f722xx_first_bootloader_startup_sources STM32F722XX_FIRST_BOOTLOADER_STARTUP_SOURCES)
 get_cmake_property(stm32f722xx_second_bootloader_startup_sources STM32F722XX_SECOND_BOOTLOADER_STARTUP_SOURCES)
+get_cmake_property(stm32f722xx_app_startup_sources STM32F722XX_APP_STARTUP_SOURCES)
 get_cmake_property(vectortable_sources VECTORTABLE_SOURCES)
 
 message(STATUS "Add ghost-feather-first-bootloader executable")
@@ -32,6 +35,14 @@ add_executable(
     ${vectortable_sources}
     )
 
+message(STATUS "Add ghost-feather-app executable")
+add_executable(
+    ghost-feather-app
+    ${app_sources}
+    ${stm32f722xx_app_startup_sources}
+    ${vectortable_sources}
+    )
+
 message(STATUS "Add ghost-feather-first-bootloader target link directories")
 target_link_directories(
     ghost-feather-first-bootloader
@@ -43,6 +54,14 @@ target_link_directories(
 message(STATUS "Add ghost-feather-second-bootloader target link directories")
 target_link_directories(
     ghost-feather-second-bootloader
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/libopencm3/lib
+    ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
+    )
+
+message(STATUS "Add ghost-feather-app target link directories")
+target_link_directories(
+    ghost-feather-app
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
@@ -68,6 +87,16 @@ target_link_libraries(
     libopencm3_stm32f7.a
     )
 
+message(STATUS "Add ghost-feather-app target link libraries")
+target_link_libraries(
+    ghost-feather-app
+    PRIVATE
+    stm32f722xx_app_startup
+    app
+    vectortable
+    libopencm3_stm32f7.a
+    )
+
 message(STATUS "Add ghost-feather-first-bootloader target include directories")
 target_include_directories(
     ghost-feather-first-bootloader
@@ -86,6 +115,16 @@ target_include_directories(
     ${PROJECT_SOURCE_DIR}/bootloader/stm32f722xx/second_bootloader
     )
 
+message(STATUS "Add ghost-feather-app target include directories")
+target_include_directories(
+    ghost-feather-app
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
+    ${PROJECT_SOURCE_DIR}/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/app/stm32f722xx
+    )
+
+
 message(STATUS "Add ghost-feather-first-bootloader target compile definitions")
 target_compile_definitions(
     ghost-feather-first-bootloader
@@ -96,6 +135,13 @@ target_compile_definitions(
 message(STATUS "Add ghost-feather-second-bootloader target compile definitions")
 target_compile_definitions(
     ghost-feather-second-bootloader
+    PRIVATE
+    "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
+    )
+
+message(STATUS "Add ghost-feather-app target compile definitions")
+target_compile_definitions(
+    ghost-feather-app
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
     )
@@ -114,6 +160,17 @@ target_compile_options(
 message(STATUS "Add ghost-feather-second-bootloader target compile options")
 target_compile_options(
     ghost-feather-second-bootloader
+    PRIVATE
+    "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
+    "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
+    "$<$<COMPILE_LANGUAGE:C>:-O1>"
+    )
+
+message(STATUS "Add ghost-feather-app target compile options")
+target_compile_options(
+    ghost-feather-app
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
     "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
@@ -136,6 +193,15 @@ target_link_options(
     ghost-feather-second-bootloader
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_second_bootloader.ld
+    -nostartfiles
+    -nostdlib
+    )
+
+message(STATUS "Add ghost-feather-app target compile options")
+target_link_options(
+    ghost-feather-app
+    PRIVATE
+    -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_app.ld
     -nostartfiles
     -nostdlib
     )
