feat: Update CMakeLists.txt and add boot updater startup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,18 @@ project(
     )
 
 add_subdirectory(bootloader)
+add_subdirectory(dfu)
 add_subdirectory(app)
 add_subdirectory(startup)
 add_subdirectory(vectortable)
 
 get_cmake_property(first_bootloader_sources FIRST_BOOTLOADER_SOURCES)
 get_cmake_property(second_bootloader_sources SECOND_BOOTLOADER_SOURCES)
+get_cmake_property(boot_updater BOOT_UPDATER_SOURCES)
 get_cmake_property(app_sources APP_SOURCES)
 get_cmake_property(stm32f722xx_first_bootloader_startup_sources STM32F722XX_FIRST_BOOTLOADER_STARTUP_SOURCES)
 get_cmake_property(stm32f722xx_second_bootloader_startup_sources STM32F722XX_SECOND_BOOTLOADER_STARTUP_SOURCES)
+get_cmake_property(stm32f722xx_boot_updater_startup_sources STM32F722XX_BOOT_UPDATER_STARTUP_SOURCES)
 get_cmake_property(stm32f722xx_app_startup_sources STM32F722XX_APP_STARTUP_SOURCES)
 get_cmake_property(vectortable_sources VECTORTABLE_SOURCES)
 
@@ -32,6 +35,14 @@ add_executable(
     ghost-feather-second-bootloader
     ${second_bootloader_sources}
     ${stm32f722xx_second_bootloader_startup_sources}
+    ${vectortable_sources}
+    )
+
+message(STATUS "Add ghost-feather-boot-updater executable")
+add_executable(
+    ghost-feather-boot-updater
+    ${boot_updater}
+    ${stm32f722xx_boot_updater_startup_sources}
     ${vectortable_sources}
     )
 
@@ -54,6 +65,14 @@ target_link_directories(
 message(STATUS "Add ghost-feather-second-bootloader target link directories")
 target_link_directories(
     ghost-feather-second-bootloader
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/libopencm3/lib
+    ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
+    )
+
+message(STATUS "Add ghost-feather-boot-updater target link directories")
+target_link_directories(
+    ghost-feather-boot-updater
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
@@ -87,6 +106,16 @@ target_link_libraries(
     libopencm3_stm32f7.a
     )
 
+message(STATUS "Add ghost-feather-boot-updater target link libraries")
+target_link_libraries(
+    ghost-feather-boot-updater
+    PRIVATE
+    stm32f722xx_boot_updater_startup
+    boot_updater
+    vectortable
+    libopencm3_stm32f7.a
+    )
+
 message(STATUS "Add ghost-feather-app target link libraries")
 target_link_libraries(
     ghost-feather-app
@@ -115,6 +144,15 @@ target_include_directories(
     ${PROJECT_SOURCE_DIR}/bootloader/stm32f722xx/second_bootloader
     )
 
+message(STATUS "Add ghost-feather-boot-updater target include directories")
+target_include_directories(
+    ghost-feather-boot-updater
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
+    ${PROJECT_SOURCE_DIR}/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/dfu/stm32f722xx/boot_updater
+    )
+
 message(STATUS "Add ghost-feather-app target include directories")
 target_include_directories(
     ghost-feather-app
@@ -135,6 +173,13 @@ target_compile_definitions(
 message(STATUS "Add ghost-feather-second-bootloader target compile definitions")
 target_compile_definitions(
     ghost-feather-second-bootloader
+    PRIVATE
+    "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
+    )
+
+message(STATUS "Add ghost-feather-boot-updater target compile definitions")
+target_compile_definitions(
+    ghost-feather-boot-updater
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
     )
@@ -168,6 +213,17 @@ target_compile_options(
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
     )
 
+message(STATUS "Add ghost-feather-boot-updater target compile options")
+target_compile_options(
+    ghost-feather-boot-updater
+    PRIVATE
+    "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
+    "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
+    "$<$<COMPILE_LANGUAGE:C>:-O1>"
+    )
+
 message(STATUS "Add ghost-feather-app target compile options")
 target_compile_options(
     ghost-feather-app
@@ -193,6 +249,15 @@ target_link_options(
     ghost-feather-second-bootloader
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_second_bootloader.ld
+    -nostartfiles
+    -nostdlib
+    )
+
+message(STATUS "Add ghost-feather-boot-updater target compile options")
+target_link_options(
+    ghost-feather-boot-updater
+    PRIVATE
+    -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_boot_updater.ld
     -nostartfiles
     -nostdlib
     )
