--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ add_subdirectory(dfu)
 add_subdirectory(app)
 add_subdirectory(startup)
 add_subdirectory(vectortable)
-add_subdirectory(shared)
+add_subdirectory(controller)
+add_subdirectory(lib)
 
 get_cmake_property(first_bootloader_sources FIRST_BOOTLOADER_SOURCES)
 get_cmake_property(second_bootloader_sources SECOND_BOOTLOADER_SOURCES)
@@ -22,7 +23,8 @@ get_cmake_property(stm32f722xx_second_bootloader_startup_sources STM32F722XX_SEC
 get_cmake_property(stm32f722xx_boot_updater_startup_sources STM32F722XX_BOOT_UPDATER_STARTUP_SOURCES)
 get_cmake_property(stm32f722xx_app_startup_sources STM32F722XX_APP_STARTUP_SOURCES)
 get_cmake_property(vectortable_sources VECTORTABLE_SOURCES)
-get_cmake_property(usart_printf_sources USART_PRINTF_SOURCES)
+get_cmake_property(usart_controller_sources USART_CONTROLLER_SOURCES)
+get_cmake_property(stm32f722xx_syscall_sources STM32F722XX_SYSCALL_SOURCES)
 
 message(STATUS "Add ghost-feather-first-bootloader executable")
 add_executable(
@@ -46,7 +48,8 @@ add_executable(
     ${boot_updater}
     ${stm32f722xx_boot_updater_startup_sources}
     ${vectortable_sources}
-    ${usart_printf_sources}
+    ${usart_controller_sources}
+    ${stm32f722xx_syscall_sources}
     )
 
 message(STATUS "Add ghost-feather-app executable")
@@ -63,7 +66,7 @@ target_link_directories(
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/shared
+    /Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     )
 
 message(STATUS "Add ghost-feather-second-bootloader target link directories")
@@ -72,7 +75,7 @@ target_link_directories(
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/shared
+    /Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     )
 
 message(STATUS "Add ghost-feather-boot-updater target link directories")
@@ -81,7 +84,8 @@ target_link_directories(
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/shared
+    ${PROJECT_SOURCE_DIR}/controller
+    ${PROJECT_SOURCE_DIR}/lib
     /Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     )
 
@@ -91,7 +95,7 @@ target_link_directories(
     PRIVATE
     ${PROJECT_SOURCE_DIR}/libopencm3/lib
     ${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/shared
+    /Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     )
 
 message(STATUS "Add ghost-feather-first-bootloader target link libraries")
@@ -121,7 +125,8 @@ target_link_libraries(
     stm32f722xx_boot_updater_startup
     boot_updater
     vectortable
-    usart_printf
+    usart_controller
+    stm32f722xx_syscall
     libopencm3_stm32f7.a
     libc.a
     )
@@ -161,7 +166,7 @@ target_include_directories(
     ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
     ${PROJECT_SOURCE_DIR}/libopencm3/include
     ${PROJECT_SOURCE_DIR}/dfu/stm32f722xx/boot_updater
-    ${PROJECT_SOURCE_DIR}/shared/printf
+    ${PROJECT_SOURCE_DIR}/controller/usart
     )
 
 message(STATUS "Add ghost-feather-app target include directories")
@@ -207,7 +212,7 @@ target_compile_options(
     ghost-feather-first-bootloader
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
-    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
@@ -218,7 +223,7 @@ target_compile_options(
     ghost-feather-second-bootloader
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
-    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
@@ -229,7 +234,7 @@ target_compile_options(
     ghost-feather-boot-updater
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
-    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
@@ -240,7 +245,7 @@ target_compile_options(
     ghost-feather-app
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
-    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
@@ -251,7 +256,7 @@ target_link_options(
     ghost-feather-first-bootloader
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_first_bootloader.ld
-    -nostartfiles
+    -L/Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     -nostdlib
     )
 
@@ -260,6 +265,7 @@ target_link_options(
     ghost-feather-second-bootloader
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_second_bootloader.ld
+    -L/Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     -nostartfiles
     )
 
@@ -268,6 +274,7 @@ target_link_options(
     ghost-feather-boot-updater
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_boot_updater.ld
+    -L/Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     -nostartfiles
     )
 
@@ -276,5 +283,6 @@ target_link_options(
     ghost-feather-app
     PRIVATE
     -T${PROJECT_SOURCE_DIR}/linkerscript/stm32f722xx/stm32f722xx_app.ld
+    -L/Applications/ArmGNUToolchain/13.3.rel1/arm-none-eabi/arm-none-eabi/lib/thumb/v7e-m+fp/hard
     -nostartfiles
     )
