--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libopencm3"]
-	path = libopencm3
+	path = submodules/libopencm3
 	url = https://github.com/libopencm3/libopencm3.git
 [submodule "printf"]
-	path = printf
+	path = submodules/printf
 	url = https://github.com/mpaland/printf.git
