--- a/bootloader/CMakeLists.txt
+++ b/bootloader/CMakeLists.txt
@@ -30,7 +30,7 @@ target_include_directories(
     first_bootloader
     PRIVATE
     ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/submodules/libopencm3/include
     )
 
 message(STATUS "Add second_bootloader target include directories")
@@ -38,7 +38,7 @@ target_include_directories(
     second_bootloader
     PRIVATE
     ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
-    ${PROJECT_SOURCE_DIR}/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/submodules/libopencm3/include
     )
 
 message(STATUS "Add first_bootloader target compile definitions")
