--- a/submodules/CMakeLists.txt
+++ b/submodules/CMakeLists.txt
@@ -1,38 +1,38 @@
-file(GLOB_RECURSE APP_SOURCES stm32f722xx/*.c)
+file(GLOB_RECURSE PRINTF_SOURCES printf/*.c)
 
 set_property(
     GLOBAL
-    PROPERTY APP_SOURCES
-    ${APP_SOURCES}
+    PROPERTY PRINTF_SOURCES
+    ${PRINTF_SOURCES}
     )
 
-message(STATUS "Add app library")
+message(STATUS "Add printf library")
 add_library(
-    app
-    ${APP_SOURCES}
+    printf
+    ${PRINTF_SOURCES}
     )
 
-message(STATUS "Add app target include directories")
+message(STATUS "Add printf target include directories")
 target_include_directories(
-    app
+    printf
     PRIVATE
-    ${PROJECT_SOURCE_DIR}/memory/stm32f722xx
     ${PROJECT_SOURCE_DIR}/submodules/libopencm3/include
+    ${PROJECT_SOURCE_DIR}/submodules/printf
     )
 
-message(STATUS "Add app target compile definitions")
+message(STATUS "Add printf target compile definitions")
 target_compile_definitions(
-    app
+    printf
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:STM32F7>"
     )
 
-message(STATUS "Add app target compile options")
+message(STATUS "Add printf target compile options")
 target_compile_options(
-    app
+    printf
     PRIVATE
     "$<$<COMPILE_LANGUAGE:C>:-mfloat-abi=hard>"
-    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv4-sp-d16>"
+    "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
     "$<$<COMPILE_LANGUAGE:C>:-O1>"
