--- a/dfu/CMakeLists.txt
+++ b/dfu/CMakeLists.txt
@@ -68,7 +68,8 @@ target_compile_options(
     "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-sp-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
-    "$<$<COMPILE_LANGUAGE:C>:-O1>"
+    "$<$<COMPILE_LANGUAGE:C>:-Wcast-align>"
+    "$<$<COMPILE_LANGUAGE:C>:-O3>"
     )
 
 message(STATUS "Add dust target compile options")
@@ -79,5 +80,6 @@ target_compile_options(
     "$<$<COMPILE_LANGUAGE:C>:-mfpu=fpv5-sp-d16>"
     "$<$<COMPILE_LANGUAGE:C>:-mcpu=cortex-m7>"
     "$<$<COMPILE_LANGUAGE:C>:-mthumb>"
-    "$<$<COMPILE_LANGUAGE:C>:-O1>"
+    "$<$<COMPILE_LANGUAGE:C>:-Wcast-align>"
+    "$<$<COMPILE_LANGUAGE:C>:-O3>"
     )
