--- a/tests/gtest/hello_test/CMakeLists.txt
+++ b/tests/gtest/hello_test/CMakeLists.txt
@@ -3,8 +3,23 @@ add_executable(
     hello_test.cc
     )
 
+target_compile_options(
+    hello_test
+    PRIVATE
+    --coverage
+    -g
+    -O0
+    )
+
+target_link_options(
+    hello_test
+    PRIVATE
+    --coverage
+    )
+
 target_link_libraries(
     hello_test
+    PRIVATE
     GTest::gtest_main
     )
 
