--- a/tests/gtest/dfu/dust/handshake/CMakeLists.txt
+++ b/tests/gtest/dfu/dust/handshake/CMakeLists.txt
@@ -1,21 +1,20 @@
 file(GLOB_RECURSE DUST_SOURCES ${PROJECT_ROOT_DIR}/dfu/stm32f722xx/dust/*.c)
 
 add_executable(
-    test0
-    test0.cc
+    handshake
+    handshake.cc
     ${DUST_SOURCES}
     )
 
-message(STATUS "PROJECT ROOT DIR is ${PROJECT_ROOT_DIR}")
 target_include_directories(
-    test0
+    handshake
     PRIVATE
     ${PROJECT_ROOT_DIR}/dfu/stm32f722xx/dust
     ${PROJECT_ROOT_DIR}/tests/gmock
     )
 
 target_compile_options(
-    test0
+    handshake
     PRIVATE
     --coverage
     -g
@@ -23,16 +22,16 @@ target_compile_options(
     )
 
 target_link_options(
-    test0
+    handshake
     PRIVATE
     --coverage
     )
 
 target_link_libraries(
-    test0
+    handshake
     PRIVATE
     GTest::gtest_main
     )
 
 include(GoogleTest)
-gtest_discover_tests(test0)
+gtest_discover_tests(handshake)
