--- a/tests/gtest/dfu/dust/CMakeLists.txt
+++ b/tests/gtest/dfu/dust/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_subdirectory(crc16-lut-generation)
 add_subdirectory(handshake)
-add_subdirectory(test2)
+add_subdirectory(header)
 add_subdirectory(test3)
