feature: Add serialization related unit tests

--- a/tests/gtest/dfu/dust/CMakeLists.txt
+++ b/tests/gtest/dfu/dust/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(handshake)
 add_subdirectory(header)
 add_subdirectory(payload)
 add_subdirectory(packet)
+add_subdirectory(serialization)
