--- a/tests/gtest/dfu/dust/CMakeLists.txt
+++ b/tests/gtest/dfu/dust/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(header)
 add_subdirectory(payload)
 add_subdirectory(packet)
 add_subdirectory(serialization)
+add_subdirectory(deserialization)
