feature: Add transmission and reception related unit tests

--- a/tests/gtest/dfu/dust/CMakeLists.txt
+++ b/tests/gtest/dfu/dust/CMakeLists.txt
@@ -5,3 +5,5 @@ add_subdirectory(payload)
 add_subdirectory(packet)
 add_subdirectory(serialization)
 add_subdirectory(deserialization)
+add_subdirectory(transmission)
+add_subdirectory(reception)
