feat: Add bmi270_get_dev function unit test

--- a/tests/gtest/CMakeLists.txt
+++ b/tests/gtest/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(
 
 enable_testing()
 
+add_subdirectory(controller/bmi270)
 add_subdirectory(controller/usart)
 add_subdirectory(data_structure/circular_buffer)
 add_subdirectory(dfu/dust)
