--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -2,3 +2,5 @@ add_subdirectory(get_dev)
 add_subdirectory(get_pwr_mode_conf)
 add_subdirectory(deinit)
 add_subdirectory(time_get)
+add_subdirectory(time_read)
+add_subdirectory(time_set)
