feat: Add bmi270 gyr_get_y procedure and null pointer protection unit tests

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -2,6 +2,7 @@ add_subdirectory(deinit)
 add_subdirectory(get_dev)
 add_subdirectory(get_pwr_mode_conf)
 add_subdirectory(gyr_get_x)
+add_subdirectory(gyr_get_y)
 add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
