--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(acc_set_x)
+add_subdirectory(acc_set_y)
 add_subdirectory(deinit)
 add_subdirectory(get_dev)
 add_subdirectory(get_pwr_mode_conf)
