feat: Add bmi270 acc_get_y procedure and null pointer protection unit tests. Previous commit adds set function

--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(acc_get_x)
+add_subdirectory(acc_get_y)
 add_subdirectory(acc_set_x)
 add_subdirectory(acc_set_y)
 add_subdirectory(acc_set_z)
