--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -18,3 +18,4 @@ add_subdirectory(temp_set)
 add_subdirectory(time_get)
 add_subdirectory(time_read)
 add_subdirectory(time_set)
+add_subdirectory(stat_get)
