--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -19,3 +19,4 @@ add_subdirectory(time_get)
 add_subdirectory(time_read)
 add_subdirectory(time_set)
 add_subdirectory(stat_get)
+add_subdirectory(stat_set)
