--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(acc_get_x)
 add_subdirectory(acc_get_y)
 add_subdirectory(acc_get_z)
+add_subdirectory(acc_read)
 add_subdirectory(acc_set_x)
 add_subdirectory(acc_set_y)
 add_subdirectory(acc_set_z)
