--- a/tests/gtest/controller/bmi270/CMakeLists.txt
+++ b/tests/gtest/controller/bmi270/CMakeLists.txt
@@ -11,6 +11,7 @@ add_subdirectory(get_pwr_mode_conf)
 add_subdirectory(gyr_get_x)
 add_subdirectory(gyr_get_y)
 add_subdirectory(gyr_get_z)
+add_subdirectory(gyr_read)
 add_subdirectory(gyr_set_x)
 add_subdirectory(gyr_set_y)
 add_subdirectory(gyr_set_z)
